Setting inputs in query params, adding internal scrolling to years table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-toolbar color="primary">
-    <span>Calculator</span>
+    <span>Financial Learning</span>
   </mat-toolbar>
   <div class="app-contents">
     <app-real-estate></app-real-estate>
