--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -8,6 +8,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-bottom: 1rem;
 }
 
+.margin-top-half {
+    margin-top: .5rem;
+}
+
+.margin-top {
+    margin-top: 1rem;
+}
+
 .calc-full-width {
     width: 100%;
     box-sizing: border-box;
@@ -52,3 +60,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         @include undo-flex;
     }
   }
+
+ 
