--- a/src/app/summary-table/summary-table.component.html
+++ b/src/app/summary-table/summary-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="items" class="calc-full-width">
+<table mat-table [dataSource]="items" [trackBy]="trackByTitle" class="calc-full-width">
     <ng-container matColumnDef="title">
         <td mat-cell *matCellDef="let item">
             <strong *ngIf="item.isHighlight; else regular">{{item.title}}</strong> 
