--- a/src/app/mortgage/mortgage.component.html
+++ b/src/app/mortgage/mortgage.component.html
@@ -1,4 +1,8 @@
-<table mat-table [dataSource]="mortgage.loans" [trackBy]="trackByLoanId" class="calc-full-width">
+<div style="overflow: auto">
+<table mat-table 
+    [dataSource]="mortgage.loans" 
+    [trackBy]="trackByLoanId" 
+    class="calc-at-least-full-width nowrap">
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let loan"> {{loan.name}} </td>
@@ -7,18 +11,41 @@
     <ng-container matColumnDef="principal">
         <th mat-header-cell *matHeaderCellDef> Principal </th>
         <td mat-cell *matCellDef="let loan; let i = index;">
-            <input [(ngModel)]="mortgage.loans[i].principal" class="calc-medium-width" style="width: 70px"
+            <input 
+                [(ngModel)]="mortgage.loans[i].principal" 
+                class="calc-medium-width" 
+                style="width: 6em"
+                (ngModelChange)="onLoanPrincipalChange(loan)"
                 type="number" />
+            <span class="calc-input-unit">{{currencyService.currencySymbol}}</span>
         </td>
         <td mat-footer-cell *matFooterCellDef>
-            <calc-money [amount]="mortgage.principal"></calc-money>
+            <calc-money 
+                [type]="totalPercentageCovered === 100 ? 'good' : 'bad'"
+                [amount]="mortgage.principal"></calc-money>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="portion">
+        <th mat-header-cell *matHeaderCellDef> Portion </th>
+        <td mat-cell *matCellDef="let i = index;">
+            <input
+                [(ngModel)]="portions[i]" 
+                (ngModelChange)="onLoanPortionChange(i)"
+                class="calc-medium-width" 
+                style="width: 3em"
+                type="number" />
+            <span class="calc-input-unit">%</span>
+        </td>
+        <td mat-footer-cell *matFooterCellDef>
+            {{totalPercentageCovered}}%
         </td>
     </ng-container>
     <ng-container matColumnDef="interestRate">
         <th mat-header-cell *matHeaderCellDef> Interest Rate </th>
         <td mat-cell *matCellDef="let loan; let i = index;">
             <input [(ngModel)]="mortgage.loans[i].interestRate" type="number" step="0.1" min="0" max="15"
-                style="width: 40px" class="calc-medium-width" />%
+                style="width: 3em" class="calc-medium-width" />
+            <span class="calc-input-unit">%</span>
         </td>
         <td mat-footer-cell *matFooterCellDef> {{mortgage.avgInterestRate | number}}% </td>
     </ng-container>
@@ -70,4 +97,5 @@
         <mat-icon aria-hidden="false" aria-label="Plus">add</mat-icon>
         Add Loan
     </button>
+</div>
 </div>
