--- a/src/app/real-estate/real-estate.component.html
+++ b/src/app/real-estate/real-estate.component.html
@@ -17,7 +17,7 @@
 
                         <div class="calc-flex-horizontal sum-inputs">
                             <mat-form-field class="calc-flex-1">
-                                <mat-label>Initial Sum</mat-label>
+                                <mat-label>Initial savings</mat-label>
                                 <input 
                                     type="number" 
                                     matInput 
@@ -26,11 +26,11 @@
                                     (ngModelChange)="update()"
                                     name="initialSum"
                                     #ctrl="ngModel">
-                                <span matSuffix>{{currencySymbol}}</span>
+                                <span matSuffix>{{currencyService.currencySymbol}}</span>
                             </mat-form-field>
 
                             <mat-form-field class="calc-flex-1">
-                                <mat-label>Current Rent</mat-label>
+                                <mat-label>Initial Rent</mat-label>
                                 <input 
                                     type="number" 
                                     matInput 
@@ -39,10 +39,10 @@
                                     (ngModelChange)="update()" 
                                     name="currentRent"
                                     #ctrl="ngModel">
-                                <span matSuffix>{{currencySymbol}}</span>
+                                <span matSuffix>{{currencyService.currencySymbol}}</span>
                             </mat-form-field>
                         </div>
-                        <mat-form-field style="width: 200px" class="margin-bottom-1">
+                        <mat-form-field style="width: 200px" class="margin-bottom-1 margin-bottom-2">
                             <mat-label>Investment interest rate</mat-label>
                             <input 
                                 type="number" 
@@ -52,10 +52,10 @@
                                 (ngModelChange)="update()"
                                 name="investmentInterest" #ctrl="ngModel">
                             <span matSuffix>%</span>
-                            <mat-hint align="start"><strong>Expected interest rate for investments</strong> </mat-hint>
+                            <mat-hint align="start"><strong>Expected average annual interest rate for investments</strong> </mat-hint>
                         </mat-form-field>
                         <div class="calc-flex-horizontal rate-inputs">
-                            <mat-form-field class="calc-flex-1">
+                            <mat-form-field class="calc-flex-1 margin-bottom-2">
                                 <mat-label>Rent annual increase</mat-label>
                                 <input 
                                     type="number" 
@@ -66,9 +66,10 @@
                                     name="rentAnnualIncreaseRate"
                                     #ctrl="ngModel">
                                 <span matSuffix>%</span>
+                                <mat-hint align="start"><strong>Expected average annual increase in rent payments</strong> </mat-hint>
                             </mat-form-field>
 
-                            <mat-form-field class="calc-flex-1">
+                            <mat-form-field class="calc-flex-1 margin-bottom-2">
                                 <mat-label>Property value annual increase</mat-label>
                                 <input 
                                     type="number" 
@@ -79,6 +80,7 @@
                                     name="annualAssetInterest" 
                                     #ctrl="ngModel">
                                 <span matSuffix>%</span>
+                                <mat-hint align="start"><strong>Expected average annual increase in property value</strong> </mat-hint>
                             </mat-form-field>
                         </div>
                         <mat-form-field style="width: 200px" class="margin-bottom-1">
@@ -112,12 +114,12 @@
                                 [(ngModel)]="price" 
                                 name="price" 
                                 #ctrl="ngModel">
-                            <span matSuffix>{{currencySymbol}}</span>
+                            <span matSuffix>{{currencyService.currencySymbol}}</span>
                         </mat-form-field>
                         <calc-mortgage 
                             (mortgageChange)="setMortgage($event)" 
-                            [loans]="loansConfig"
-                            [totalAmount]="price - initialSum"></calc-mortgage>
+                            [config]="{ loans: loansConfig, requiredPrincipal: price - initialSum }">
+                        </calc-mortgage>
                     </mat-expansion-panel>
 
                     <mat-expansion-panel>
@@ -131,7 +133,7 @@
                             </mat-panel-description>
                         </mat-expansion-panel-header>
                         <div style="height: 600px; max-height: calc(100vh - 100px); overflow: auto">
-                        <table mat-table [dataSource]="yearsData" class="calc-full-width">
+                        <table mat-table [dataSource]="yearsData" class="calc-at-least-full-width">
                             <ng-container matColumnDef="year">
                                 <th mat-header-cell *matHeaderCellDef>Year</th>
                                 <td mat-cell *matCellDef="let item"> {{item.year}} </td>
@@ -158,7 +160,7 @@
                                     <calc-money type="good" [amount]="totalRentInvestmentSum"></calc-money>
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="totalRentSavings">
+                            <ng-container matColumnDef="totalRentEquity">
                                 <th mat-header-cell *matHeaderCellDef>Rent solvency</th>
                                 <td mat-cell *matCellDef="let item">
                                     <calc-money [amount]="item.solventRentAmount"></calc-money>
@@ -187,8 +189,8 @@
                                     <calc-money type="good" [amount]="totalMortgageSavings"></calc-money>
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="mortgageSolvency">
-                                <th mat-header-cell *matHeaderCellDef>Mortgage solvency</th>
+                            <ng-container matColumnDef="mortgageEquity">
+                                <th mat-header-cell *matHeaderCellDef>Mortgage equity</th>
                                 <td mat-cell *matCellDef="let item">
                                     <calc-money type="good" [amount]="item.solventMortgageAmount"></calc-money>
                                 </td>
@@ -305,7 +307,7 @@
                                     Investments value
                                 </td>
                                 <td class="mat-cell">
-                                    <calc-money [amount]="totalRentSavings"></calc-money>
+                                    <calc-money [amount]="totalRentEquity"></calc-money>
                                 </td>
                                 <td class="mat-cell">
                                     <calc-money [amount]="totalMortgageSavings">
@@ -363,7 +365,8 @@
                     <div mat-card-avatar>
                         <mat-icon aria-hidden="false" aria-label="Summary">savings</mat-icon>
                     </div>
-                    <mat-card-title>Savings per time</mat-card-title>
+                    <mat-card-title>Equity Over Time</mat-card-title>
+                    <mat-card-subtitle>Equity owned by the home owner/renter, by years</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <google-chart 
