Auto-fix amounts in mortgage input table, moved the remove loan button to selection.

--- a/src/app/real-estate/real-estate.component.html
+++ b/src/app/real-estate/real-estate.component.html
@@ -118,7 +118,7 @@
                         </mat-form-field>
                         <calc-mortgage 
                             (mortgageChange)="setMortgage($event)" 
-                            [config]="{ loans: loansConfig, requiredPrincipal: price - initialSum }">
+                            [config]="mortgageConfig">
                         </calc-mortgage>
                     </mat-expansion-panel>
 
