--- a/src/app/mortgage/mortgage.component.html
+++ b/src/app/mortgage/mortgage.component.html
@@ -1,101 +1,114 @@
 <div style="overflow: auto">
-<table mat-table 
-    [dataSource]="mortgage.loans" 
-    [trackBy]="trackByLoanId" 
-    class="calc-at-least-full-width nowrap">
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let loan"> {{loan.name}} </td>
-        <td mat-footer-cell *matFooterCellDef>Total</td>
-    </ng-container>
-    <ng-container matColumnDef="principal">
-        <th mat-header-cell *matHeaderCellDef> Principal </th>
-        <td mat-cell *matCellDef="let loan; let i = index;">
-            <input 
-                [(ngModel)]="mortgage.loans[i].principal" 
-                class="calc-medium-width" 
-                style="width: 6em"
-                (ngModelChange)="onLoanPrincipalChange(loan)"
-                type="number" />
-            <span class="calc-input-unit">{{currencyService.currencySymbol}}</span>
-        </td>
-        <td mat-footer-cell *matFooterCellDef>
-            <calc-money 
-                [type]="totalPercentageCovered === 100 ? 'good' : 'bad'"
-                [amount]="mortgage.principal"></calc-money>
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="portion">
-        <th mat-header-cell *matHeaderCellDef> Portion </th>
-        <td mat-cell *matCellDef="let i = index;">
-            <input
-                [(ngModel)]="portions[i]" 
-                (ngModelChange)="onLoanPortionChange(i)"
-                class="calc-medium-width" 
-                style="width: 3em"
-                type="number" />
-            <span class="calc-input-unit">%</span>
-        </td>
-        <td mat-footer-cell *matFooterCellDef>
-            {{totalPercentageCovered}}%
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="interestRate">
-        <th mat-header-cell *matHeaderCellDef> Interest Rate </th>
-        <td mat-cell *matCellDef="let loan; let i = index;">
-            <input [(ngModel)]="mortgage.loans[i].interestRate" type="number" step="0.1" min="0" max="15"
-                style="width: 3em" class="calc-medium-width" />
-            <span class="calc-input-unit">%</span>
-        </td>
-        <td mat-footer-cell *matFooterCellDef> {{mortgage.avgInterestRate | number}}% </td>
-    </ng-container>
-    <ng-container matColumnDef="months">
-        <th mat-header-cell *matHeaderCellDef> Months </th>
-        <td mat-cell *matCellDef="let loan; let i = index;">
-            <input [(ngModel)]="mortgage.loans[i].months" class="calc-medium-width" type="number" min="1" />
-        </td>
-        <td mat-footer-cell *matFooterCellDef> {{mortgage.totalMonths}} </td>
-    </ng-container>
-    <ng-container matColumnDef="monthlyPayment">
-        <th mat-header-cell *matHeaderCellDef> Monthly payment </th>
-        <td mat-cell *matCellDef="let loan">
-            <calc-money [amount]="loan.monthlyPayment"></calc-money>
-        </td>
-        <td mat-footer-cell *matFooterCellDef>
-            <calc-money [amount]="mortgage.maxMonthlyPayment"></calc-money>
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="total">
-        <th mat-header-cell *matHeaderCellDef>Total amount</th>
-        <td mat-cell *matCellDef="let loan">
-            <calc-money [amount]="loan.totalAmount"></calc-money>
-        </td>
-        <td mat-footer-cell *matFooterCellDef>
-            <calc-money [amount]="mortgage.totalAmount"></calc-money>
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="removeLoan">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let loan">
+    <table mat-table [dataSource]="loansDataSource" [trackBy]="trackByLoanId" class="calc-at-least-full-width calc-table-nowrap-contents">
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let loan" data-id="{{loan.id}}">
+                <mat-checkbox 
+                    (click)="$event.stopPropagation()" 
+                    (change)="$event ? selection.toggle(loan) : null"
+                    [checked]="selection.isSelected(loan)" 
+                    [aria-label]="checkboxLabel(loan)">
+                </mat-checkbox>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let loan"> {{loan.name}} </td>
+            <td mat-footer-cell *matFooterCellDef>Total</td>
+        </ng-container>
+
+        <!-- Principal Column -->
+        <ng-container matColumnDef="principal">
+            <th mat-header-cell *matHeaderCellDef> Principal </th>
+            <td mat-cell *matCellDef="let loan; let i = index;">
+                <input [(ngModel)]="mortgage.loans[i].principal" class="calc-medium-width" style="width: 6em"
+                    (ngModelChange)="onLoanPrincipalChange(loan)" type="number" />
+                <span class="calc-input-unit">{{currencyService.currencySymbol}}</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>
+                <calc-money [type]="principalCoverageDifference ? 'bad' : 'good'" [amount]="mortgage.principal">
+                </calc-money>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="portion">
+            <th mat-header-cell *matHeaderCellDef> Portion </th>
+            <td mat-cell *matCellDef="let i = index;">
+                <input [(ngModel)]="portions[i]" (ngModelChange)="onLoanPortionChange(i)" class="calc-medium-width"
+                    style="width: 3em" type="number" />
+                <span class="calc-input-unit">%</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>
+                {{totalPercentageCovered}}%
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="interestRate">
+            <th mat-header-cell *matHeaderCellDef> Interest Rate </th>
+            <td mat-cell *matCellDef="let loan; let i = index;">
+                <input [(ngModel)]="mortgage.loans[i].interestRate" type="number" step="0.1" min="0" max="15"
+                    style="width: 3em" class="calc-medium-width" />
+                <span class="calc-input-unit">%</span>
+            </td>
+            <td mat-footer-cell *matFooterCellDef> {{mortgage.avgInterestRate | number}}% </td>
+        </ng-container>
+        <ng-container matColumnDef="months">
+            <th mat-header-cell *matHeaderCellDef> Months </th>
+            <td mat-cell *matCellDef="let loan; let i = index;">
+                <input [(ngModel)]="mortgage.loans[i].months" class="calc-medium-width" type="number" min="1" />
+            </td>
+            <td mat-footer-cell *matFooterCellDef> {{mortgage.totalMonths}} </td>
+        </ng-container>
+        <ng-container matColumnDef="monthlyPayment">
+            <th mat-header-cell *matHeaderCellDef> Monthly payment </th>
+            <td mat-cell *matCellDef="let loan">
+                <calc-money [amount]="loan.monthlyPayment"></calc-money>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>
+                <calc-money [amount]="mortgage.maxMonthlyPayment"></calc-money>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef>Total amount</th>
+            <td mat-cell *matCellDef="let loan">
+                <calc-money [amount]="loan.totalAmount"></calc-money>
+            </td>
+            <td mat-footer-cell *matFooterCellDef>
+                <calc-money [amount]="mortgage.totalAmount"></calc-money>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedMortgageLoanColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedMortgageLoanColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedMortgageLoanColumns"></tr>
+    </table>
+    <div class="margin-top-half calc-buttons-row">
+        <span *ngIf="selection.hasValue()">
             <button 
-                mat-icon-button 
-                (click)="mortgage.removeLoan(loan)"
-                color="warn" 
-                matTooltip="Remove this loan"
-                aria-label="Remove this loan">
-                <mat-icon>delete</mat-icon>
+                *ngIf="principalCoverageDifference"
+                mat-raised-button 
+                color="primary" 
+                (click)="fixPrincipals()">
+                <mat-icon aria-hidden="false" aria-label="Plus">auto_fix_normal</mat-icon>
+                Autofix selected loan{{selection.selected.length > 1 ? 's' : ''}}
             </button>
-        </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedMortgageLoanColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedMortgageLoanColumns;"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedMortgageLoanColumns"></tr>
-</table>
-<div class="margin-top-half">
-    <button mat-raised-button color="primary" (click)="addLoan()">
-        <mat-icon aria-hidden="false" aria-label="Plus">add</mat-icon>
-        Add Loan
-    </button>
-</div>
+            <button 
+                mat-raised-button 
+                color="warn" 
+                [disabled]="selection.selected.length === mortgage.loans.length"
+                (click)="removeSelectedLoans()">
+                <mat-icon aria-hidden="false" aria-label="Plus">delete</mat-icon>
+                Remove {{selection.selected.length}} selected
+            </button>
+        </span>
+        <button mat-raised-button color="primary" (click)="addLoan()">
+            <mat-icon aria-hidden="false" aria-label="Plus">add</mat-icon>
+            Add Loan
+        </button>
+    </div>
 </div>
