Added localize package

--- a/src/app/real-estate/real-estate.component.html
+++ b/src/app/real-estate/real-estate.component.html
@@ -1,5 +1,5 @@
 <article class="calc-container">
-    <h1>Rent vs Ownership</h1>
+    <h1>What is better financially, rent or home ownership?</h1>
     <div class="calc-form-contents">
         <div class="calc-form">
             <div class="margin-bottom-1">
