--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="calc-app" dir="ltr">
+<div class="calc-app" dir="{{direction}}">
   <mat-toolbar color="primary">
-    <span>Financial Learning</span>
+    <span i18n="Title for the app@@appTitle">Financial Learning</span>
   </mat-toolbar>
   <div class="app-contents">
     <app-real-estate></app-real-estate>
