--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -2,6 +2,9 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 html, body { height: 100%; }
+html {
+    overflow-x: hidden;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .margin-bottom-1 {
